--- a/src/pages/ResultPage/TitleTextResultPage/TitleTextResultPage.module.scss
+++ b/src/pages/ResultPage/TitleTextResultPage/TitleTextResultPage.module.scss
@@ -1,10 +1,10 @@
 // ResultPage/TitleTextResultPage/TitleTextResultPage.module.scss
 
-.titleTextBlock04 {
+.titleTextResultPage {
   max-width: 510px;
   color: #000;
   font-family: 'FerryBlack', sans-serif;
-  font-size: clamp(24px, 4vw, 40px);
+  font-size: 40px;
   font-style: normal;
   font-weight: 900;
   line-height: normal;
