--- a/src/styles/mixins/_mixins.scss
+++ b/src/styles/mixins/_mixins.scss
@@ -18,3 +18,29 @@
     color: #000;
   }
 }
+
+// Миксин для стилей инпутов
+@mixin input {
+  width: 242px;
+  height: 43px;
+  position: absolute;
+  background: #ffffff;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+  border-radius: 5px;
+  border: 1px #C7C7C7 solid;
+
+  &::placeholder {
+    color: #949494;
+  }
+}
+
+@mixin hint {
+  position: absolute;
+  opacity: 0.40;
+  color: #949494;
+  font-size: 14px;
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  letter-spacing: 0.42px;
+  word-wrap: break-word;
+}
