--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -3,9 +3,17 @@
 @font-face {
     font-family: 'Inter';
     src: url('../../public/fonts/Inter-Regular.woff') format('woff');
+
+    font-weight: 400;
+    font-style: normal;
+
 }
 
 @font-face {
     font-family: 'FerryBlack';
     src: url('../../public/fonts/ferry_black.woff') format('woff');
+
+    font-weight: 400;
+    font-style: normal;
+
 }
