--- a/src/pages/SearchPage/SearchFormCard/SearchFormCard.module.scss
+++ b/src/pages/SearchPage/SearchFormCard/SearchFormCard.module.scss
@@ -1,12 +1,5 @@
 @import "../../../styles/mixins/_mixins";
-
-$white: #ffffff;
-$black: #000000;
-$gray-light: #C7C7C7;
-$gray-medium: #949494;
-$blue: #5970ff;
-$shadow: rgba(0, 0, 0, 0.20);
-$shadow-light: rgba(0, 0, 0, 0.05);
+@import "../../../styles/mixins/_var";
 
 .container {
   width: 100%;
