--- a/src/pages/Main/LeftTextBlock/LeftTextBlock.module.scss
+++ b/src/pages/Main/LeftTextBlock/LeftTextBlock.module.scss
@@ -29,9 +29,11 @@
         letter-spacing: 0.6px;
 
         @media (max-width: 767px) {
-            // Стили для мобильных устройств
-            display: flex;
-            //font-size: 28px; // Подгоните под себя для меньших экранов
+            // Стили для мобильных
+        }
+
+        @media (min-width: 768px) {
+            // Стили для планшетов и десктопов
         }
     }
 
