--- a/src/pages/SearchPage/SearchFormCard/SearchFormCard.module.scss
+++ b/src/pages/SearchPage/SearchFormCard/SearchFormCard.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/mixins/_mixins";
+@import "../../../styles/mixins/typography";
 @import "../../../styles/mixins/_var";
 
 .container {
