--- a/src/components/AppHeader/UnauthenticatedUserPanel/UnauthenticatedUserPanel.module.scss
+++ b/src/components/AppHeader/UnauthenticatedUserPanel/UnauthenticatedUserPanel.module.scss
@@ -3,19 +3,43 @@
 .unauthenticatedUserPanel {
   display: flex;
   align-items: center;
+  // Адаптивные стили
+  @media (max-width: 767px) {
+    display: none; // Скрываем панель в мобильной версии
+  }
 }
+
+.burger-menu {
+  cursor: pointer;
+  font-size: 24px;
+
+  // Адаптивные стили
+  @media (min-width: 768px) {
+    display: none; // Скрываем бургер в планшетной версии
+  }}
 
 .slash {
   margin-right: 20px;
   margin-left: 7px;
+
+  // Адаптивные стили
+  @media (max-width: 767px) {
+    display: none; // Скрываем слеш в мобильной версии
+  }
 }
 
+
 .button {
-    width: 65px;
-    height: 26px;
-    flex-shrink: 0;
-    margin-left: 11px;
-    margin-top: 0;
-    border-radius: 5px;
-    background: #7CE3E1;
+  width: 65px;
+  height: 26px;
+  flex-shrink: 0;
+  margin-left: 11px;
+  margin-top: 0;
+  border-radius: 5px;
+  background: #7CE3E1;
+
+  // Адаптивные стили
+  @media (max-width: 767px) {
+    display: none; // Скрываем кнопку в мобильной версии
+  }
 }
