--- a/src/pages/SearchPage/SearchFormCard/DateInput/DateInput.module.scss
+++ b/src/pages/SearchPage/SearchFormCard/DateInput/DateInput.module.scss
@@ -1,5 +1,5 @@
 // DateInput.module.scss
-@import "../../../../styles/mixins/_mixins";
+@import "../../../../styles/mixins/typography";
 @import "../../../../styles/mixins/_var";
 
 .customDateInput {
