--- a/src/components/AppHeader/HeaderContent/HeaderContent.module.scss
+++ b/src/components/AppHeader/HeaderContent/HeaderContent.module.scss
@@ -4,62 +4,77 @@
 @import '../../../styles/mixins/_var';
 
 .header__content {
-  @include text-base;
-  display: flex;
-  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   justify-content: space-between;
   align-items: center;
-  background: var($white);
-  padding-left: 60px;
 
   @media (max-width: 767px) {
-    padding-right: 26px;
-    padding-left: 15px; // Уменьшим отступ слева в мобильной версии
-    justify-content: space-between;
+    display: inline-flex;
+    justify-content: flex-start;
+    gap: 194px;
   }
 
-  &_burger {
+  &__burger {
     display: none;
 
     @media (max-width: 767px) {
       display: block;
       width: 30px;
       height: 25px;
-      margin-right: 26px;
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
     }
   }
 
-  &_logo {
+  &__logo {
     width: 141px;
-    height: auto;
-    margin-left: 60px;
+    height: 141px;
+    top: -24px;
+    left: 60px;
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
 
     @media (max-width: 767px) {
       width: 111px;
       height: 111px;
-      margin-left: 14px;
     }
   }
 
   /* Блок - навигационные ссылки */
   &__navLinks {
+    @include text-base;
     a,
     span {
       @include link;
-      margin-right: 49px;
+      margin-right: 25px;
+      margin-left: 25px;
 
       &:hover {
         @include link;
-      }
-
-      // Адаптивные стили
-      @media (max-width: 767px) {
-        display: none; // Скрываем навигационные ссылки в мобильной версии
       }
     }
 
     span:hover {
       text-decoration: none;
     }
+
+    @media (max-width: 767px) {
+      display: none;
+    }
+  }
+
+}
+
+.header__menu {
+
+  @media (max-width: 767px) {
+    display: none;
   }
 }
