--- a/src/components/AppHeader/UnauthenticatedUserPanel/UnauthenticatedUserPanel.module.scss
+++ b/src/components/AppHeader/UnauthenticatedUserPanel/UnauthenticatedUserPanel.module.scss
@@ -1,45 +1,45 @@
 // UnauthenticatedUserPanel.module.scss
+@import '../../../styles/mixins/_media';
+@import '../../../styles/mixins/_typography';
+@import '../../../styles/mixins/_var';
 
-.unauthenticatedUserPanel {
+.container {
+  @include text-base;
   display: flex;
   align-items: center;
+  position: relative;
+  justify-content: space-between;
+  //margin-right: 230px;
+  //padding-left: 60px; // Добавим отступ слева
+  //padding-right: 60px; // Добавим отступ справа
+  //color: var($black);
+
+
+  &_slash {
+    margin-right: 20px;
+    margin-left: 7px;
+
+  }
+
+  &_link {
+    @include link;
+    margin-right: 49px;}
+
+
+  &_button {
+    width: 65px;
+    height: 26px;
+    flex-shrink: 0;
+    margin-left: 11px;
+    margin-top: 0;
+    border-radius: 5px;
+    background: #7CE3E1;
+
+  }
   // Адаптивные стили
   @media (max-width: 767px) {
     display: none; // Скрываем панель в мобильной версии
   }
 }
 
-.burger-menu {
-  cursor: pointer;
-  font-size: 24px;
 
-  // Адаптивные стили
-  @media (min-width: 768px) {
-    display: none; // Скрываем бургер в планшетной версии
-  }}
-
-.slash {
-  margin-right: 20px;
-  margin-left: 7px;
-
-  // Адаптивные стили
-  @media (max-width: 767px) {
-    display: none; // Скрываем слеш в мобильной версии
-  }
-}
-
-
-.button {
-  width: 65px;
-  height: 26px;
-  flex-shrink: 0;
-  margin-left: 11px;
-  margin-top: 0;
-  border-radius: 5px;
-  background: #7CE3E1;
-
-  // Адаптивные стили
-  @media (max-width: 767px) {
-    display: none; // Скрываем кнопку в мобильной версии
-  }
-}
