--- a/src/styles/mixins/_var.scss
+++ b/src/styles/mixins/_var.scss
@@ -4,6 +4,7 @@ $white: #f8f2f2;
 $black: #000000;
 $gray-light: #C7C7C7;
 $gray-medium: #949494;
+$gray-color: #888;
 $blue: #5970ff;
 $shadow: rgba(0, 0, 0, 0.20);
 $shadow-light: rgba(0, 0, 0, 0.05);
