--- a/src/pages/SearchPage/SearchFormCard/SearchFormCard.module.scss
+++ b/src/pages/SearchPage/SearchFormCard/SearchFormCard.module.scss
@@ -1,10 +1,22 @@
-@import "../../../styles/mixins/typography";
+@import "../../../styles/mixins/_typography";
 @import "../../../styles/mixins/_var";
+@import "../../../styles/mixins/_media";
 
 .container {
   width: 100%;
   height: 100%;
   position: relative;
+
+  @media (max-width: 767px) {
+    .sharedStyles {
+      display: none;
+    }
+
+    .mobileStyles {
+      flex-direction: column;
+    }
+  }
+
 
   .leftBlock {
     width: 872px;
@@ -65,6 +77,8 @@
         top: 71px;
         left: 44px;
       }
+
+
 
     }
 
@@ -177,6 +191,10 @@
             cursor: pointer;
           }
         }
+      }
+
+      @media (max-width: 767px) {
+        display: none;
       }
     }
 
