--- a/src/components/TitleTextBlock/TitleTextBlock.module.scss
+++ b/src/components/TitleTextBlock/TitleTextBlock.module.scss
@@ -1,5 +1,6 @@
 // TitleTextBlock.module.scss
 .titleTextBlock {
+  width: 743px;
   color: #000;
   font-family: 'FerryBlack', sans-serif;
   font-size: 45px;
@@ -7,4 +8,12 @@
   font-weight: 900;
   line-height: normal;
   letter-spacing: 0.45px;
+  margin-left: 60px;
+  margin-top: 40px;
+
+  @media (max-width: 767px) {
+    font-size: 28px;
+    width: 100%;
+    margin-left: 14px;
+  }
 }
