--- a/src/pages/SearchPage/SearchPage.module.scss
+++ b/src/pages/SearchPage/SearchPage.module.scss
@@ -46,10 +46,15 @@
   display: block;
   margin-top: 25px;
   min-width: 743px;
-  //max-width: 950px;
   padding-left: 60px;
   position: relative;
   right: -5px;
+
+  @media (max-width: 767px) {
+    font-size: 18px;
+    width: 100%;
+    margin-left: 14px;
+  }
 }
 
 .leftSmallText {
