--- a/src/pages/SearchPage/SearchTitleTextBlock/SearchTitleTextBlock.module.scss
+++ b/src/pages/SearchPage/SearchTitleTextBlock/SearchTitleTextBlock.module.scss
@@ -1,14 +1,22 @@
 // SearchTitleTextBlock.module.scss
 
 .titleSearchTextBlock {
-  width: 743px;
-  color: #000;
-  font-family: 'FerryBlack', sans-serif;
-  font-size: 45px;
-  font-style: normal;
-  font-weight: 900;
-  line-height: normal;
-  letter-spacing: 0.45px;
-  margin-left: 60px;
-  margin-top: 40px;
+	width: 743px;
+	color: #000;
+	font-family: 'FerryBlack', sans-serif;
+	font-size: 45px;
+	font-style: normal;
+	font-weight: 900;
+	line-height: normal;
+	letter-spacing: 0.45px;
+	margin-left: 60px;
+	margin-top: 40px;
+
+	@media (max-width: 767px) {
+		font-size: 28px;
+		width: 100%;
+		margin-left: 14px;
+	}
 }
+  
+
