--- a/src/pages/SearchPage/SearchTitleTextBlock/SearchTitleTextBlock.module.scss
+++ b/src/pages/SearchPage/SearchTitleTextBlock/SearchTitleTextBlock.module.scss
@@ -14,7 +14,8 @@
 
 	@media (max-width: 767px) {
 		font-size: 28px;
-		width: 100%;
+		width: 361px;
+		letter-spacing: 0.28px;
 		margin-left: 14px;
 	}
 }
