--- a/src/pages/ResultPage/LeftSmallText/LeftSmallText.module.scss
+++ b/src/pages/ResultPage/LeftSmallText/LeftSmallText.module.scss
@@ -1,9 +1,18 @@
-//
+// pages/ResultPage/LeftSmallText.module.scss
 .leftTextUnderTitleBlock {
-  width: 534px;
-  position: absolute;
+  width: 533px;
+  display: block;
+  margin-top: 25px;
+  min-width: 743px;
   padding-left: 60px;
-  padding-top: 201px;
+  position: relative;
+  right: -5px;
+
+  @media (max-width: 767px) {
+    font-size: 18px;
+    width: 100%;
+    margin-left: 14px;
+  }
 
   .leftSmallText {
     color: #000;
@@ -13,5 +22,9 @@
     font-weight: 400;
     line-height: normal;
     letter-spacing: 0.2px;
+
+    @media (max-width: 767px) {
+      font-size: 18px;
+    }
   }
 }
