--- a/src/pages/SearchPage/SearchFormCard/SearchFormCard.module.scss
+++ b/src/pages/SearchPage/SearchFormCard/SearchFormCard.module.scss
@@ -3,306 +3,295 @@
 @import "../../../styles/mixins/_media";
 
 .container {
-  .desktopVersion {
-    width: 100%;
-    height: 100%;
-    position: relative;
-  }
+	.desktopVersion {
+		width: 100%;
+		height: 100%;
+		position: relative;
+	}
 
-  .mobileVersion {
-    @media (max-width: 767px) {
-      display: flex;
-      flex-direction: column;
-    }
-  }
+	.mobileVersion {
+		@media (max-width: 767px) {
+			display: flex;
+			flex-direction: column;
+		}
+	}
 
-  .leftBlock {
-    width: 872px;
-    height: 543px;
-    left: 0;
-    top: 0;
-    position: absolute;
-    background: $white;
-    box-shadow: 0 0 20px $shadow;
-    border-radius: 10px;
-    margin-top: 47px;
-    margin-bottom: 64px;
-    margin-left: 53px;
-    align-items: center;
-    // Общие стили для desktop
+	.leftBlock {
+		width: 872px;
+		height: 543px;
+		left: 0;
+		top: 0;
+		position: absolute;
+		background: $white;
+		box-shadow: 0 0 20px $shadow;
+		border-radius: 10px;
+		margin-top: 47px;
+		margin-bottom: 64px;
+		margin-left: 53px;
+		align-items: center;
+		// Общие стили для desktop
 
-    @media (max-width: 767px) {
-      width: 375px;
-      height: 688px;
+		@media (max-width: 767px) {
+			width: 375px;
+			height: 688px;
 
-      margin-top: 35px;
-      margin-bottom: 164px;
-      align-items: center;
-    }
+			margin-top: 35px;
+			margin-bottom: 164px;
+			margin-left: 0;
+			//margin-right: 0;
 
-
-    &__inn {
-      width: 242px;
-      height: 43px;
-      left: 44px;
-      top: 71px;
-      position: absolute;
-
-      @media (max-width: 767px) {
-        display: none;
-      }
-
-      &__label {
-        left: 0;
-        top: 8px;
-        position: absolute;
-        color: $black;
-        font-size: 18px;
-        font-family: 'Inter', sans-serif;
-        font-weight: 400;
-        letter-spacing: 0.54px;
-        word-wrap: break-word;
-        margin-top: 29px;
-        margin-left: 44px;
-
-        @media (max-width: 767px) {
-          display: none;
-        }
-      }
-
-      &__input {
-        @include input;
-        top: 71px;
-        left: 44px;
-
-        @media (max-width: 767px) {
-          display: none;
-        }
-      }
+			align-items: center;
+		}
 
 
-      &__tonality {
-      left: 0;
-      top: 8px;
-      position: absolute;
-      color: $black;
-      font-size: 18px;
-      font-family: 'Inter', sans-serif;
-      font-weight: 400;
-      letter-spacing: 0.54px;
-      word-wrap: break-word;
+		&__inn {
+			width: 242px;
+			height: 43px;
+			left: 44px;
+			top: 71px;
+			position: absolute;
 
 			@media (max-width: 767px) {
 				display: none;
 			}
-    }
 
-      &__input {
-        @include input;
-        top: 71px;
-        left: 44px;
+			&__label {
+				left: 0;
+				top: 8px;
+				position: absolute;
+				color: $black;
+				font-size: 18px;
+				font-family: 'Inter', sans-serif;
+				font-weight: 400;
+				letter-spacing: 0.54px;
+				word-wrap: break-word;
+				margin-top: 29px;
+				margin-left: 44px;
 
 				@media (max-width: 767px) {
-					display: none;
+					margin-top: 32px;
+					margin-left: 14px;
 				}
-      }
-
-
-
-    }
-
-    &__tonality {
-      width: 242px;
-      height: 43px;
-      left: 44px;
-      top: 186px;
-      position: absolute;
-
-			@media (max-width: 767px) {
-				display: none;
 			}
 
-      &__label {
-        left: 0;
-        top: 8px;
-        position: absolute;
-        color: $black;
-        font-size: 18px;
-        font-family: 'Inter', sans-serif;
-        font-weight: 400;
-        letter-spacing: 0.54px;
-        word-wrap: break-word;
-        margin-top: 144px;
-        margin-left: 44px;
-      }
+			&__input {
+				@include input;
+				top: 71px;
+				left: 44px;
+
+				@media (max-width: 767px) {
+					top: 74px;
+					left: 14px;
+				}
+			}
+		}
 
 
-      &__input {
-        @include input;
-        top: 186px;
-        left: 44px;
+		&__tonality {
+			width: 242px;
+			height: 43px;
+			left: 44px;
+			top: 186px;
+			position: absolute;
+			color: $black;
+			font-size: 18px;
+			font-family: 'Inter', sans-serif;
+			font-weight: 400;
+			letter-spacing: 0.54px;
+			word-wrap: break-word;
+
+			@media (max-width: 767px) {
+				top: 93px;
+				margin-left: 14px;
+			}
+
+			&__label {
+				left: 0;
+				top: 8px;
+				position: absolute;
+				color: $black;
+				font-size: 18px;
+				font-family: 'Inter', sans-serif;
+				font-weight: 400;
+				letter-spacing: 0.54px;
+				word-wrap: break-word;
+				margin-top: 144px;
+				margin-left: 44px;
+
+				@media (max-width: 767px) {
+					top: 14px;
+					margin-left: 14px;
+				}
+
+			}
+
+			&__input {
+				@include input;
+				top: 186px;
+				left: 44px;
 
 				@media (max-width: 767px) {
 					width: 242px;
 					height: 43px;
-					top: 26px;
+					top: 189px;
 					left: 14px;
 				}
-      }
-    }
+			}
+		}
 
-    &__documentCount {
-      width: 242px;
-      height: 43px;
-      left: 44px;
-      top: 301px;
-      position: absolute;
+		&__documentCount {
+			width: 242px;
+			height: 43px;
+			left: 44px;
+			top: 301px;
+			position: absolute;
+
+			@media (max-width: 767px) {
+				width: 335px;
+			}
+
+			&__label {
+				left: 0;
+				top: 8px;
+				position: absolute;
+				color: $black;
+				font-size: 18px;
+				font-family: 'Inter', sans-serif;
+				font-weight: 400;
+				letter-spacing: 0.54px;
+				word-wrap: break-word;
+				margin-top: 259px;
+				margin-left: 44px;
+
+				@media (max-width: 767px) {
+					display: none;
+				}
+			}
+
+			&__input {
+				@include input;
+				top: 301px;
+				left: 44px;
+
+				@media (max-width: 767px) {
+					display: none;
+				}
+			}
+		}
+
+		.leftBlockLabel {
+			left: 0;
+			top: 8px;
+			position: absolute;
+			color: $black;
+			font-size: 18px;
+			font-family: 'Inter', sans-serif;
+			font-weight: 400;
+			letter-spacing: 0.54px;
+			word-wrap: break-word;
+			margin-top: 383px;
+			margin-left: 44px;
 
 			@media (max-width: 767px) {
 				display: none;
 			}
 
-      &__label {
-        left: 0;
-        top: 8px;
-        position: absolute;
-        color: $black;
-        font-size: 18px;
-        font-family: 'Inter', sans-serif;
-        font-weight: 400;
-        letter-spacing: 0.54px;
-        word-wrap: break-word;
-        margin-top: 259px;
-        margin-left: 44px;
+			&__label {
+				left: 0;
+				top: 8px;
+				position: absolute;
+				color: $black;
+				font-size: 18px;
+				font-family: 'Inter', sans-serif;
+				font-weight: 400;
+				letter-spacing: 0.54px;
+				word-wrap: break-word;
 
 				@media (max-width: 767px) {
 					display: none;
 				}
-      }
+			}
+		}
 
-      &__input {
-        @include input;
-        top: 301px;
-        left: 44px;
-
-				@media (max-width: 767px) {
-					display: none;
-				}
-      }
-    }
-
-    .leftBlockLabel {
-      left: 0;
-      top: 8px;
-      position: absolute;
-      color: $black;
-      font-size: 18px;
-      font-family: 'Inter', sans-serif;
-      font-weight: 400;
-      letter-spacing: 0.54px;
-      word-wrap: break-word;
-      margin-top: 383px;
-      margin-left: 44px;
+		.leftBlock_dateInputs {
+			display: flex;
+			flex-direction: row;
+			margin-left: 44px;
+			margin-top: 425px;
 
 			@media (max-width: 767px) {
-				display: none;
+				//display: none;
 			}
+		}
 
-      &__label {
-        left: 0;
-        top: 8px;
-        position: absolute;
-        color: $black;
-        font-size: 18px;
-        font-family: 'Inter', sans-serif;
-        font-weight: 400;
-        letter-spacing: 0.54px;
-        word-wrap: break-word;
+	}
 
-				@media (max-width: 767px) {
-					display: none;
-				}
-      }
-    }
+	.rightBlock {
+		width: 428px;
+		height: 589px;
+		left: 496px;
+		margin-top: 83px;
+		position: absolute;
 
-    .leftBlock_dateInputs {
-      display: flex;
-      flex-direction: row;
-      margin-left: 44px;
-      margin-top: 425px;
-
-			@media (max-width: 767px) {
-				display: none;
-			}
-    }
-
-  }
-
-  .rightBlock {
-    width: 428px;
-    height: 589px;
-    left: 496px;
-    margin-top: 83px;
-    position: absolute;
 
 		@media (max-width: 767px) {
 			display: none;
 		}
 
-    .checkboxList {
-      li {
-        label {
-          input {
-          }
 
-          &:hover {
-            cursor: pointer;
-          }
-        }
-      }
-    }
+		.checkboxList {
+			li {
+				label {
+					input {
+					}
 
+					&:hover {
+						cursor: pointer;
+					}
+				}
+			}
+		}
 
-    .searchButton {
-      width: 305px;
-      height: 59px;
-      right: -85px;
-      bottom: -75px;
-      background: $blue;
-      position: relative;
-      box-shadow: 0 0 20px $shadow-light;
-      border-radius: 5px;
+	.searchButtonSection {
+		.searchButton {
+			width: 305px;
+			height: 59px;
+			right: -85px;
+			bottom: -75px;
+			background: $blue;
+			position: relative;
+			box-shadow: 0 0 20px $shadow-light;
+			border-radius: 5px;
 
-      @media (max-width: 767px) {
-        width: 335px;
-        height: 59px;
-        right: 15px;
-        bottom: 15px;
-      }
+			@media (max-width: 767px) {
+				width: 335px;
+				height: 59px;
+				right: 15px;
+				bottom: 15px;
+			}
 
+			&__ButtonText {
+				color: $white;
+				font-size: 22px;
+				font-family: 'Inter', sans-serif;
+				font-weight: 500;
+				letter-spacing: 0.66px;
+				word-wrap: break-word;
+			}
+		}
 
+		.rightBlockSmallText {
+			font-size: 14px;
+			color: $gray-medium;
+			font-family: 'Inter', sans-serif;
+			font-weight: 400;
+			letter-spacing: 0.42px;
+			word-wrap: break-word;
+			margin-top: 80px;
+			margin-left: 65px;
+		}
+	}
+}
 
-
-      &__ButtonText {
-        color: $white;
-        font-size: 22px;
-        font-family: 'Inter', sans-serif;
-        font-weight: 500;
-        letter-spacing: 0.66px;
-        word-wrap: break-word;
-      }
-    }
-  }
-
-  .rightBlockSmallText {
-    font-size: 14px;
-    color: $gray-medium;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    letter-spacing: 0.42px;
-    word-wrap: break-word;
-    margin-top: 80px;
-    margin-left: 65px;
-  }
 
 }
