--- a/src/pages/SearchPage/SearchFormCard/SearchFormCard.module.scss
+++ b/src/pages/SearchPage/SearchFormCard/SearchFormCard.module.scss
@@ -3,18 +3,9 @@
 @import "../../../styles/mixins/_media";
 
 .container {
-	.desktopVersion {
 		width: 100%;
 		height: 100%;
 		position: relative;
-	}
-
-	.mobileVersion {
-		@media (max-width: 767px) {
-			display: flex;
-			flex-direction: column;
-		}
-	}
 
 	.leftBlock {
 		width: 872px;
@@ -29,7 +20,6 @@
 		margin-bottom: 64px;
 		margin-left: 53px;
 		align-items: center;
-		// Общие стили для desktop
 
 		@media (max-width: 767px) {
 			width: 375px;
@@ -39,10 +29,8 @@
 			margin-bottom: 164px;
 			margin-left: 0;
 			//margin-right: 0;
-
 			align-items: center;
 		}
-
 
 		&__inn {
 			width: 242px;
@@ -228,7 +216,7 @@
 
 	.rightBlock {
 		width: 428px;
-		height: 589px;
+		height: auto;
 		left: 496px;
 		margin-top: 83px;
 		position: absolute;
@@ -252,22 +240,45 @@
 			}
 		}
 
+}
+
 	.searchButtonSection {
+		position: absolute;
+
+
+		.rightBlockSmallText {
+			font-size: 14px;
+			color: $gray-medium;
+			font-family: 'Inter', sans-serif;
+			font-weight: 400;
+			letter-spacing: 0.42px;
+			word-wrap: break-word;
+			margin-top: 524px;
+			margin-left: 560px;
+
+			@media (max-width: 767px) {
+
+				margin-top: 655px;
+				margin-left: 15px;
+				font-size: 14px;
+			}
+		}
+
 		.searchButton {
 			width: 305px;
 			height: 59px;
-			right: -85px;
-			bottom: -75px;
 			background: $blue;
-			position: relative;
+			position: absolute;
 			box-shadow: 0 0 20px $shadow-light;
 			border-radius: 5px;
+			margin-top: 460px;
+			margin-left: 581px;
 
 			@media (max-width: 767px) {
 				width: 335px;
 				height: 59px;
-				right: 15px;
-				bottom: 15px;
+				margin-top: 565px;
+				margin-left: 15px;
 			}
 
 			&__ButtonText {
@@ -277,21 +288,14 @@
 				font-weight: 500;
 				letter-spacing: 0.66px;
 				word-wrap: break-word;
+
+				@media (max-width: 767px) {
+					font-size: 20px;
+
+
+				}
 			}
 		}
 
-		.rightBlockSmallText {
-			font-size: 14px;
-			color: $gray-medium;
-			font-family: 'Inter', sans-serif;
-			font-weight: 400;
-			letter-spacing: 0.42px;
-			word-wrap: break-word;
-			margin-top: 80px;
-			margin-left: 65px;
-		}
 	}
-}
-
-
 }
