--- a/src/styles/mixins/_var.scss
+++ b/src/styles/mixins/_var.scss
@@ -1,6 +1,6 @@
 // _var.scss
 
-$white: #f8f2f2;
+$white: #ffffff;
 $black: #000000;
 $gray-light: #C7C7C7;
 $gray-medium: #949494;
@@ -8,3 +8,4 @@ $gray-color: #888;
 $blue: #5970ff;
 $shadow: rgba(0, 0, 0, 0.20);
 $shadow-light: rgba(0, 0, 0, 0.05);
+$green: #029491;
